# fp64_gb_emulation

./: CHECKLIST.md  CMakeLists.txt  HPL.md  HPL_INTEGRATION_RESEARCH.md  INT8_RUN.md  PYTHON_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TEST.md  c_comparison.cu  compare_fp64.sh  dgemm_benchmark.cu  example_app.sh  example_simple.cu  example_simple.py  linpack_benchmark.cu  ozIMMU.txt  run_python.sh  test.py  test_enhanced.py
ozIMMU/: CMAKE_INSTRUCTIONS.md  CMakeLists.txt  cmake_instructions.txt  modules.txt
ozIMMU/data_analysis/: analysis.ipynb  data.csv  data2.csv  data_gb10.csv  default.md  gb10_data_note.md  power.csv
ozimmu_data_analysis/: analysis.ipynb  data_gb10.csv  data_small.csv  power_gh200.csv
